[package]
name = "chaos-network"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
lazy_static = "1.4.0"
regex = "1.7"
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-args=-static-pie",
    "-C", "target-feature=+crt-static"
]