# chaos-lambda-extension/extension/Cargo.toml
[package]
name = "chaos-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"

# Only if you need OpenSSL functionality
openssl = { version = "0.10", optional = true }
